--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -56,6 +56,15 @@
               </div>
             </div>
         </div>
+
+        <div class="container col-md-4">
+          <div class="container-lg selectionDiv" (click)="openModal('listOperationTypeModal')">
+            <div class="form-floating mb-3">
+              <h3 class="title" >List Operation Profile</h3>
+            </div>
+          </div>
+        </div>
+
 </div>
 
 
@@ -1122,6 +1131,163 @@
       </form>
   </div>
 </div>
+
+
+<div  [ngStyle]="{'display': isModalOpen('listOperationTypeModal') ? 'block' : 'none'}" id="listOperationTypeModal" class="modal" >
+  <div class="modal-content">
+      <span (click)="closeModal('listOperationTypeModal')" class="close">&times;</span>
+      <div>
+
+      <form  class="row g-3 needs-validation" novalidate="">
+          <div class="col-md-2"></div>
+
+          <div class="col-md-6">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+            <input type="text" class="form-control" id="validationCustom01"  name="searchTerm" placeHolder="Search" [(ngModel)]="searchTerm" (input)="onFilterChange()">
+          </div>
+        </div>
+          <div class="col-md-2">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+            <select class="form-select" id="validationCustom1" [(ngModel)]="filterField"  name="filterField" (change)="onFilterChange()" required>
+              <option selected="" disabled="" value="">Choose...</option>
+              <option>Name (WIP)</option>
+              <option>Prepatation Duration</option>
+              <option>Surgery Duration</option>
+              <option>Cleaning Duration</option>
+            </select>
+
+          </div>
+        </div>
+
+          <div class="col-md-12">
+            <div class="table-wrapper" >
+              <div class="table-title">
+              <form (ngSubmit)="onSubmitOperationTypes()" class="row g-3 needs-validation" novalidate="">
+              <table class="table table-striped table-hover table-over">
+                <thead>
+                  <tr>
+                    <th>#</th>                    
+                    <th>Name</th>
+                    <th>Prepatation Duration</th>
+                    <th>Surgery Duration</th>
+                    <th>Cleaning Duration</th> 
+                    <th>Active</th>                  
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let request of OperationTypesProfiles; let i = index" (click)="selectOperationType(request.id)" [ngClass]="{ 'selected-row': selectOperationTypeId === request.id }">
+                    <td>{{ i + 1 }}</td>
+                    <td hidden><input class="selectRequest" type="radio" id="operationType_{{ request.id }}" name="operationTypeFormID" value="{{ request.id }}" [checked]="selectOperationTypeId === request.id" hidden>{{ request.id }}</td>
+                    <td>{{ request.name }} </td>
+                    <td>{{ request.estimatedDuration.patientPreparation }}</td>
+                    <td>{{ request.estimatedDuration.surgery }}</td>
+                    <td>{{ request.estimatedDuration.cleaning }}</td>
+                    <td id="active_{{ request.id }}_{{request.active}}">
+                      <span *ngIf="request.active; else failure" class="badge rounded-pill bg-success">Yes</span>
+                      <ng-template #failure>
+                        <span class="badge rounded-pill bg-danger">No</span>
+                      </ng-template>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-9"></div>
+        <div class="col-md-3">
+          <button class="fs-5 btn btn-outline-info" (click)="viewOperationTypes()">View <i class="bi bi-info-square-fill"></i></button>
+          <button class="fs-5 btn btn-outline-warning" (click)="editPatient()">Edit <i class="bi bi-pencil-square"></i></button>
+          <button class="fs-5 btn btn-outline-danger" (click)="deactivatePatient()">Deactivate <i class="bi bi-archive-fill"></i></button>
+        </div>
+        </form>
+      </div>
+
+  </div>
+</div>
+
+<div [ngStyle]="{'display': isModalOpen('viewOperationTypeModal') ? 'block' : 'none'}" id="viewOperationTypeModal"  class="modal">
+  <div class="modal-content">
+      <span (click)="closeModal('viewOperationTypeModal')" class="close">&times;</span>
+      <div *ngIf="OperationTypeSingle">
+        <div  class="row g-3 needs-validation">
+        <div class="col-md-12"></div>
+          <div class="col-md-3">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
+                <input type="text" class="form-control" disabled="" [(ngModel)]="operationType.name">
+            </div>
+          </div>
+
+          <div class="col-md-6"></div>
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
+              <span class="input-group-text" id="add">Preparation Duration</span>
+              <input type="text" class="form-control" [value]="formatTimeToISO(operationType.estimatedDuration.patientPreparation)"  disabled >
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
+              <span class="input-group-text" id="add">Surgery Duration</span>
+              <input type="text" class="form-control" [value]="formatTimeToISO(operationType.estimatedDuration.surgery)"  disabled >
+            </div>
+          </div>
+
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
+              <span class="input-group-text" id="add">Cleaning Duration</span>
+              <input type="text" class="form-control" [value]="formatTimeToISO(operationType.estimatedDuration.cleaning)"  disabled >
+            </div>
+          </div>
+
+         <div class="col-md-2"></div>
+
+          <div class="col-md-8">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
+              <span class="input-group-text" id="add">Required Staff</span>
+            </div>
+            <table class="table table-striped table-hover table-over">
+              <thead>
+                <tr>
+                  <tr>
+                    <th>#</th>
+                    <th>Quantity</th>
+                    <th>Role</th>
+                    <th>Specialization</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let request of requiredStaffView; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ request.quantity }}</td>
+                    <td>{{ request.role }}</td>
+                    <td>{{ request.specialization }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+    
+         
+          <div class="col-md-2"></div>
+
+        </div>
+      </div>
+
+  </div>
+</div>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
