#49 Deactivate Operation Types

--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -1281,7 +1281,7 @@
         <div class="col-md-3">
           <button class="fs-5 btn btn-outline-info" (click)="viewOperationTypes()">View <i class="bi bi-info-square-fill"></i></button>
           <button class="fs-5 btn btn-outline-warning" (click)="editPatient()">Edit <i class="bi bi-pencil-square"></i></button>
-          <button class="fs-5 btn btn-outline-danger" (click)="deactivatePatient()">Deactivate <i class="bi bi-archive-fill"></i></button>
+          <button class="fs-5 btn btn-outline-danger" (click)="removeOperationType()">Deactivate <i class="bi bi-archive-fill"></i></button>
         </div>
         </form>
       </div>
