adding logout button

--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -212,7 +212,7 @@
           
 
 
-          <div class="col-12">
+          <!--<div class="col-12">
             <div class="form-check">
               <input class="form-check-input" type="checkbox" id="invalidCheck" formControlName="agree" required="">
               <label class="form-check-label" for="invalidCheck">
@@ -222,7 +222,7 @@
                 You must agree before submitting.
               </div>
             </div>
-          </div>
+          </div>!-->
       
           <button class="btn btn-primary" (click)="onUpdatePatient()">Submit form</button>
         </div>
