--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -1432,7 +1432,7 @@
                 <div class="col-md-3">
                   <div class="input-group has-validation">
                     <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
-                      <input type="text" class="form-control" disabled value="{{ operationTypeUpdate.name}}"  formControlName="name">
+                      <input type="text" class="form-control" [disabled]="true" value="{{ operationTypeUpdate.name}}"  formControlName="name">
                   </div>
                 </div>
                 <!--TODO: Meter os forms direito, para estarem no formato de leitora no .ts-->
