--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -57,7 +57,6 @@
                   </tr>
                 </tbody>
               </table>
-              
         </div>
     </div>
 
@@ -65,7 +64,7 @@
 <div [ngStyle]="{'display': isModalOpen('createRequestModal') ? 'block' : 'none'}" id="createRequestModal" class="modal">
   <div class="modal-content">
       <span (click)="closeModal('createRequestModal')" class="close">&times;</span>
-      <form (ngSubmit)="onCreateRequest()" class="row g-3 needs-validation" novalidate>
+      <form (ngSubmit)="onCreateRequest(operationRequest)" class="row g-3 needs-validation" novalidate>
           <h3 class="text-center">Insert New Operation Request</h3>
 
           <!-- Patient Email -->
@@ -108,7 +107,6 @@
   </div>
 </div>
 
-
    <!-- Filter Operation Requests Modal -->
 <div [ngStyle]="{'display': isModalOpen('filterRequestModal') ? 'block' : 'none'}" id="filterRequestModal" class="modal">
     <div class="modal-content">
@@ -150,7 +148,7 @@
     <div [ngStyle]="{'display': isModalOpen('updateRequestModal') ? 'block' : 'none'}" id="updateRequestModal" class="modal">
         <div class="modal-content">
             <span (click)="closeModal('updateRequestModal')" class="close">&times;</span>
-            <form (ngSubmit)="onUpdateRequest()">
+            <form (ngSubmit)="onUpdateRequest(updateRequest)">
                 <h3 class="text-center">Update Operation Request</h3>
 
                 <!-- Deadline -->
@@ -189,9 +187,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-<div class="container-xxl">
-  <button class="btn-right" (click)="logout()">Logout</button>
-</div>
 
 </html>
