#43 #44 #45 #46 #47 tests in cypress

--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -1231,7 +1231,7 @@
                       <button type="button" class="btn btn-danger mt-4" (click)="removeStaff(i)">Remove</button>
                     </div>
               </div>
-              <button type="button" class="btn btn-secondary" (click)="addStaff()">Add Staff</button>
+              <button type="button" class="staff-entry" (click)="addStaff()">Add Staff</button>
             </div>
 
           <!-- Estimated Duration -->
